modify swagger delete api
